--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       "nunjucks": "*",
       "cheerio": "*",
       "socket.io": "0.9",
-      "json2csv": "*"
+      "json2csv": "*",
+      "cron": "*"
   }
 }
