--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "cheerio": "*",
       "socket.io": "0.9",
       "json2csv": "*",
-      "cron": "*"
+      "cron": "*",
+      "moment": "~2.5.1"
   }
 }
